--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "sharp": "^0.31.3",
     "validator": "^13.7.0"
   }
 }
