--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "validator": "^13.7.0",
